# dataclass_io

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python_package.yml
dataclass_io/: __init__.py  lib.py  reader.py  writer.py
dataclass_io/_lib/: assertions.py  dataclass_extensions.py  file.py  typing_extensions.py
tests/: test_lib.py  test_reader.py  test_writer.py
tests/_lib/: test_assertions.py  test_dataclass_extensions.py  test_typing_extensions
